# factored-datathon-2023-neurum-ai

./: .coverage  .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.rst  batch_llm_processing.py  batch_llm_processing_historic.py  pylintrc  pyproject.toml  pytest.ini
.conf/: pylintrc
.github/workflows/: ci_pipeline.yml
config/: custom_logging.py  integration_config.py  paths_config.py
datathon/config/: integration_config.py  logging.py
datathon/infraestructure/terraform/: create_s3.tf  terraform.tfstate
datathon/src/connectors/db/: abstract_db.py  dynamo_db.py
datathon/src/etl/BronzeToSilver/: BrozeToSilver_batch.py  BrozeToSilver_stream.py
datathon/src/etl/EDA/: EDA.py
datathon/src/etl/GoldToMySQL/: GoldToMySQL.py
datathon/src/etl/SilverToGold/: SilverToGold.py
datathon/src/etl/bronce/BronzeToSilver/: BrozeToSilver_batch.py  BrozeToSilver_stream.py
datathon/src/etl/bronce/amz_metadata/: batch_amz_metadata.py
datathon/src/etl/bronce/amz_reviews/: batch_amz_reviews.py  (+1 more)
datathon/src/scripts/: connect_batch_azure.py  connect_dynamo_db.py  stream_event.py
datathon/src/utils/: data_transformation.py  functions.py  test.txt
infraestructure/terraform/: create_s3.tf  terraform.tfstate
src/connectors/db/: abstract_db.py  dynamo_db.py
src/data_quality/: batch_EDA.py  test.py
src/etl/bronce/amz_metadata/: batch_amz_metadata.py
src/etl/bronce/amz_reviews/: batch_amz_reviews.py  stream_eventhub_amz_review.scala
src/etl/bronze/amz_metadata/: batch_amz_metadata.py
src/etl/bronze/amz_reviews/: batch_amz_reviews.py  stream_eventhub_amz_review.scala
src/etl/gold/amz_reviews/: batch_amz_reviews.py  batch_amz_reviews_to_sql.py  batch_llm_processing_historic.py
src/etl/scheduled_tasks/: daily_eventhub_position.py  task_daily_eventhub_position.py
src/etl/silver/amz_reviews/: batch_amz_reviews.py  stream_amz_reviews.py
src/scripts/: connect_batch_azure.py  connect_dynamo_db.py  notebook_template.py  stream_event.py
src/utils/: data_transformation.py  functions.py
test/: test_data_transformation.py  test_utils_funcions.py
