[tool.poetry]
name = "datathon-factored"
version = "0.1.0"
description = "Dependencies manager for Datathon challenge"
authors = ["Julio Cabrera <jcabrerahi@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "datathon_factored"}]

[tool.poetry.dependencies]
python = "^3.10"
azure-eventhub = "^5.11.3"
pyspark = "^3.4.1"
unidecode = "^1.3.6"

[tool.poetry.group.dev.dependencies]
azure-eventhub = "^5.11.3"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
