[tool.poetry]
name = "datathon-factored"
version = "0.1.0"
description = "Dependencies manager for Datathon challenge"
authors = ["Julio Cabrera <jcabrerahi@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "datathon_factored"}]

[tool.poetry.dependencies]
python = "^3.10"
azure-eventhub = "^5.11.3"
pyspark = "^3.4.1"
unidecode = "^1.3.6"
boto3 = "^1.28.13"
logging = "^0.4.9.6"
pre-commit = "^3.3.3"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-httpserver = "^1.0.8"
delta-spark = "^2.4.0"
black = "^23.7.0"
flake8 = "^6.1.0"
pylint = "^2.17.5"

[tool.poetry.group.dev.dependencies]
azure-eventhub = "^5.11.3"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
